# run-buildr

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.bat
app/: config.py  database.py  dependencies.py  main.py  models.py  ratelimit.py  schemas.py  utils.py
app/routers/: analysis.py  auth.py  garmin_auth.py  login.py  users.py  workouts.py
app/services/: crypto.py  garmin.py  plan.py  wahoo.py
app/static/js/: analysis.js  editor.js
app/templates/: admin.html  analysis.html  base.html  calendar.html  editor.html  login.html  register.html
tests/: conftest.py  test_garmin.py  test_plan.py
